# terraform-iot-cloud

./: .gitignore  LICENCE.md  README.md  docker-compose.yml
.assets/: diagram.drawio
api/: Dockerfile  README.md  go.mod  main.go
api/lambdas/deploy_amplify/: go.mod  main.go
api/lambdas/devices/: go.mod  main.go
api/lambdas/discord/: go.sum  main.go
api/lambdas/iot_data/: main.go
certs/: README.md
frontend/: Dockerfile  README.md  app.vue  entrypoint.sh  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/components/dashboard/: charts.vue  dashboard.vue
frontend/components/devices/: devices.vue
frontend/components/site-content/: content.vue
frontend/components/site-header/: header.vue
frontend/components/site-sidebar/: sidebar.vue
frontend/composables/: types.ts  useApi.ts  useContent.ts  useSmhi.ts
frontend/layouts/: auth.vue  default.vue
frontend/middleware/: auth.ts
frontend/pages/: index.vue  login.vue  signup.vue
frontend/services/: auth-service.ts
iot-device/: README.md
iot-device/esp32c3/: .gitignore  Cargo.toml  README.md
iot-device/esp32c3/src/: main.rs  mqtt.rs  sensor.rs  utils.rs  wifi.rs
iot-device/virtual-device/: Dockerfile  client.py
terraform/: Dockerfile  README.md  entrypoint.sh  main.tf  outputs.tf  variables.tf
terraform/amplify/: main.tf  outputs.tf  variables.tf
terraform/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/cognito/: main.tf  outputs.tf  variables.tf
terraform/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/iam/: main.tf  outputs.tf  variables.tf
terraform/iot-core/: main.tf  outputs.tf  variables.tf
terraform/lambda/: main.tf  outputs.tf  variables.tf
terraform/s3/: main.tf  outputs.tf  variables.tf
