[package]
name = "esp32c3"
version = "0.1.0"
authors = ["Simon Thorell <kontakt@simonthorell.se>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32c3"
harness = false  # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
# https://github.com/esp-rs/esp-idf-svc
esp-idf-svc = { version = "0.49.1", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
anyhow = "1.0"
embedded-svc = "=0.28.0" # Required by esp-idf-svc v0.49.1
once_cell = "1.17.1"
esp-idf-sys = "0.35.0" # ESP_FAIL etc.

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"     # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released

[package.metadata.espflash]
chip = "esp32c3"
board = "esp32c3-devkitm-1"
target = "riscv32imc-esp-espidf"
flash-size = "4MB"
serial-port = "/dev/tty.usbserial-1110" # Change to your serial port
